--- a/public/design.html
+++ b/public/design.html
@@ -200,7 +200,7 @@
           />
         </svg>
         <h1 class="text-6xl md:text-8xl font-extrabold text-white">
-          SecureGate<span class="text-accent">+</span>
+          Security<span class="text-accent">+</span>
         </h1>
         <p class="mt-4 text-xl md:text-2xl text-gray-300 tracking-wide">
           Redefining Apartment Security for the Premium Living Space.
@@ -286,7 +286,7 @@
                   d="M9 12.75L11.25 15 15 9.75m-3-7.036A11.959 11.959 0 013.598 6 11.99 11.99 0 003 9.749c0 5.592 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.57-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.286zm0 13.036h.008v.008h-.008v-.008z"
                 />
               </svg>
-              <h2 class="text-2xl font-bold mt-4">SecureGate+</h2>
+              <h2 class="text-2xl font-bold mt-4">Security+</h2>
               <p class="text-gray-400 text-sm mt-2">Welcome, Mr. Sharma</p>
               <div class="mt-8 space-y-4">
                 <button
@@ -313,7 +313,7 @@
             The Future of Residential Safety is Here.
           </h2>
           <p class="mt-6 text-lg text-gray-300">
-            SecureGate+ is an integrated, intelligent security ecosystem that
+            Security+ is an integrated, intelligent security ecosystem that
             replaces outdated methods with a seamless digital experience. We
             provide peace of mind for residents and a premium, tech-forward
             amenity for your properties.
@@ -421,7 +421,7 @@
               1. Resident Generates OTP
             </h3>
             <p class="text-sm text-gray-400 max-w-xs">
-              Via the SecureGate+ app for an expected visitor.
+              Via the Security+ app for an expected visitor.
             </p>
           </div>
           <div class="hidden md:block text-blue-800 text-4xl">→</div>
@@ -973,7 +973,7 @@
             >
           </h2>
           <p class="mt-6 text-lg text-gray-300">
-            SecureGate+ uses the Gemini API to transform raw data into proactive
+            Security+ uses the Gemini API to transform raw data into proactive
             security intelligence. Empower your building managers to identify
             patterns, detect anomalies, and make data-driven decisions.
           </p>
@@ -1092,7 +1092,7 @@
           />
         </svg>
         <h2 class="text-4xl md:text-6xl font-extrabold text-white">
-          Partner with SecureGate<span class="text-accent">+</span>
+          Partner with Security<span class="text-accent">+</span>
         </h2>
         <p class="mt-4 text-xl md:text-2xl text-gray-300 max-w-3xl">
           Elevate your residents' safety experience and add a powerful, modern
@@ -1100,13 +1100,13 @@
         </p>
         <div class="mt-12">
           <a
-            href="mailto:sales@securegateplus.com"
+            href="mailto:sales@Securityplus.com"
             class="bg-accent-dark text-white font-bold py-4 px-8 rounded-lg text-lg transition-colors"
             >Request a Live Demo</a
           >
         </div>
         <p class="mt-8 text-gray-400">
-          sales@securegateplus.com | +1 (555) 123-4567
+          sales@Securityplus.com | +1 (555) 123-4567
         </p>
       </div>
     </section>
@@ -1311,7 +1311,7 @@
           ];
 
           const prompt = `
-                    You are a professional security analyst AI for a premium apartment complex named "SecureGate+".
+                    You are a professional security analyst AI for a premium apartment complex named "Security+".
                     Analyze the following daily security log data and generate a concise, professional security briefing for the building manager.
                     The report should be in Markdown format and include three sections:
                     1.  **Daily Summary:** A brief overview of the day's activity (total entries, types of visitors).
