--- a/public/VRspace.html
+++ b/public/VRspace.html
@@ -179,9 +179,9 @@
               Costly Physical Models
             </h3>
             <p class="text-gray-300 text-base md:text-lg">
-              Constructing a single dummy flat costs lakhs (₹2-2.5 lakhs
-              typical) and represents only one design possibility. This
-              investment is static, inflexible, and doesn't scale.
+              Constructing a single dummy flat costs lakhs and represents only
+              one design possibility. This investment is static, inflexible, and
+              doesn't scale.
             </p>
           </div>
           <div class="card">
@@ -516,7 +516,7 @@
     <section id="slide9" class="slide">
       <div class="text-center max-w-4xl w-full">
         <h2 class="text-3xl md:text-5xl font-bold mb-8 md:mb-12">
-          The Minds Behind the Space
+          The Minds Behind the VR Space
         </h2>
         <div
           class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-12"
@@ -524,28 +524,20 @@
           <div class="text-center">
             <img
               class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-4 border-4 border-accent"
-              src="https://placehold.co/128x128/E0E0E0/0b2d6e?text=AK"
+              src="https://placehold.co/128x128/E0E0E0/0b2d6e?text=MM"
               alt="Founder 1"
             />
-            <h3 class="text-xl md:text-2xl font-bold">Aarav Kumar</h3>
-            <p class="text-accent font-semibold">Founder & CEO</p>
-            <p class="text-gray-400 mt-2 max-w-xs text-sm md:text-base">
-              10+ years in real estate marketing. Understands developer pain
-              points inside and out.
-            </p>
+            <h3 class="text-xl md:text-2xl font-bold">Manyay Mishra</h3>
+            <p class="text-accent font-semibold">Founder</p>
           </div>
           <div class="text-center">
             <img
               class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-4 border-4 border-accent"
-              src="https://placehold.co/128x128/E0E0E0/0b2d6e?text=SP"
+              src="https://placehold.co/128x128/E0E0E0/0b2d6e?text=AP"
               alt="Founder 2"
             />
-            <h3 class="text-xl md:text-2xl font-bold">Saanvi Patel</h3>
-            <p class="text-accent font-semibold">CTO & Lead Developer</p>
-            <p class="text-gray-400 mt-2 max-w-xs text-sm md:text-base">
-              Unreal Engine expert with a background in architectural
-              visualization and game development.
-            </p>
+            <h3 class="text-xl md:text-2xl font-bold">Apurv Pegwar</h3>
+            <p class="text-accent font-semibold">Founder & Lead Developer</p>
           </div>
         </div>
       </div>
@@ -571,19 +563,12 @@
         <h2 class="text-4xl md:text-6xl font-extrabold text-white">
           Let's Build the Future of Real Estate.
         </h2>
-        <p class="mt-4 text-lg md:text-2xl text-gray-300 max-w-3xl">
+        <h4 class="text-2xl md:text-4xl font-bold text-white">
           Ready to revolutionize how you sell properties? Schedule a
           personalized demo today.
-        </p>
-        <div class="mt-12">
-          <a
-            href="mailto:demo@vrspace.io"
-            class="bg-accent text-white font-bold py-3 px-6 md:py-4 md:px-8 rounded-lg text-base md:text-lg bg-accent-hover transition-colors"
-            >Book Your Live Demo</a
-          >
-        </div>
+        </h4>
         <p class="mt-8 text-gray-400 text-sm md:text-base">
-          demo@vrspace.io | vrspace.io
+          dharita.in | 9589300984
         </p>
       </div>
     </section>
